# something_bg

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT.md  README.md  RELEASE_NOTES.md
.agents/skills/release/: SKILL.md
.agents/skills/release/agents/: openai.yaml
.claude/skills/build-install/: SKILL.md
.github/: RELEASE_SIGNING.md
.github/workflows/: ci.yml  release.yml
app-linux/: Cargo.toml
app-linux/src/: app.rs  main.rs  menu.rs  paths.rs
app-macos/: Cargo.toml
app-macos/.cargo/: config.toml
app-macos/src/: about.rs  app.rs  main.rs  menu.rs  paths.rs  updater.rs  wake_detector.rs
app-windows/: Cargo.toml
app-windows/src/: app.rs  main.rs  menu.rs  paths.rs
core/: Cargo.toml
core/src/: command.rs  config.rs  lib.rs  scheduler.rs  tunnel.rs
resources/: circle.icns
scripts/: Dockerfile.linux-dev  Dockerfile.windows-xwin  bundle-macos.sh  create_icons.sh  fetch-sparkle.sh  linux-cargo-check.sh  prepare-local-sparkle-update.sh  prepare-sparkle-appcast.sh  sign-and-notarize-macos.sh  windows-cargo-check.sh
spec/: sparkle-app-updates-and-apple-signing.md
src/: about.rs  app.rs  config.rs  logger.rs  main.rs  menu.rs  scheduler.rs  tunnel.rs
